[package]
name = "yoshi-esp"
version = "0.1.0"
authors = ["ds3a"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[lib]
name = "utils"
path = "src/utils.rs"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.9", features = ["binstart"] }
heapless = "*"
enumset = "*"
esp-idf-svc = "*"
embedded-svc = "*"
esp-idf-hal = "*"
embedded-hal = "*"
serde = "*"
serde_json = "1.0"
yoshi_msgs = { git = "https://github.com/DS3a/yoshi_msgs.git" }

[build-dependencies]
embuild = "0.30"
anyhow = "1"
